Fix nav spacing and number

--- a/css/s116.css
+++ b/css/s116.css
@@ -121,7 +121,7 @@ nav {
 	letter-spacing: 1px;
 	background: #000;
 	border-bottom: solid 1px #3D3C3C;
-	padding: 14px 0;
+	padding: 20px 0;
 }
 nav ul { 
 	margin-left: 20px; 
@@ -134,8 +134,7 @@ nav .logo {
 	margin: 0 330px 0 12px;
 	color: red;
 	font-size: 16px;
-	text-transform: uppercase;
-	padding-top: 10px;
+	text-transform: uppercase;	
 	letter-spacing: 6px;
 }
 nav .logo a {
@@ -449,10 +448,6 @@ footer li a {
 	.number a {		
 		color: rgb(216, 193, 124);
 	}
-	.number { 
-		font-size: 14px !important; 
-		top: 40% !important;
-	}	
 }
 
 .social-twitter {	
